Basic structure of GameOverScreen (unfinished)
To do: Figure out way to show the screen when player dies, add images.

--- a/source/desktop/build.gradle
+++ b/source/desktop/build.gradle
@@ -11,7 +11,7 @@ task run(dependsOn: classes, type: JavaExec) {
     workingDir = project.assetsDir
 
     ignoreExitValue = true as JavaExecSpec
-    jvmArgs = ["-Djava.util.logging.config.file=../../logging.properties", "-XstartOnFirstThread"]
+    jvmArgs = ["-Djava.util.logging.config.file=../../logging.properties"]
 }
 
 task debug(dependsOn: classes, type: JavaExec) {
