--- a/source/core/build.gradle
+++ b/source/core/build.gradle
@@ -28,3 +28,10 @@ javadoc {
         links 'https://libgdx.badlogicgames.com/ci/nightlies/docs/api/'
     }
 }
+
+dependencies {
+    implementation 'junit:junit:4.13.2'
+    implementation 'org.junit:junit-bom:5.7.2'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.testng:testng:7.1.0'
+}
