--- a/source/desktop/build.gradle
+++ b/source/desktop/build.gradle
@@ -35,11 +35,11 @@ task dist(type: Jar) {
     with jar
 }
 
-dependencies {
-    implementation 'junit:junit:4.13.2'
-    implementation 'org.junit:junit-bom:5.7.2'
-}
-
 dist.dependsOn classes
 
 eclipse.project.name = appName + "-desktop"
+
+//dependencies {
+//    implementation 'junit:junit:4.13.2'
+//    implementation 'org.junit:junit-bom:5.7.2'
+//}
