--- a/source/core/build.gradle
+++ b/source/core/build.gradle
@@ -29,8 +29,13 @@ javadoc {
     }
 }
 
+dependencies {
+    implementation 'junit:junit:4.13.1'
+}
+
 //dependencies {
-//    testImplementation 'junit:junit:4.13.2'
-//    testImplementation platform('org.junit:junit-bom:5.7.2')
-//    testImplementation 'org.testng:testng:7.1.0'
+//    implementation 'junit:junit:4.13.2'
+//    implementation 'org.junit:junit-bom:5.7.2'
+//    implementation 'junit:junit:4.13.1'
+//    implementation 'org.testng:testng:7.1.0'
 //}
