--- a/source/core/build.gradle
+++ b/source/core/build.gradle
@@ -30,12 +30,7 @@ javadoc {
 }
 
 dependencies {
+    implementation 'junit:junit:4.13.2'
     implementation 'junit:junit:4.13.1'
+    implementation 'org.testng:testng:7.1.0'
 }
-
-//dependencies {
-//    implementation 'junit:junit:4.13.2'
-//    implementation 'org.junit:junit-bom:5.7.2'
-//    implementation 'junit:junit:4.13.1'
-//    implementation 'org.testng:testng:7.1.0'
-//}
