--- a/source/desktop/build.gradle
+++ b/source/desktop/build.gradle
@@ -12,6 +12,7 @@ task run(dependsOn: classes, type: JavaExec) {
 
     ignoreExitValue = true as JavaExecSpec
     jvmArgs = ["-Djava.util.logging.config.file=../../logging.properties"]
+//    jvmArgs = ["-Djava.util.logging.config.file=../../logging.properties", "-XstartOnFirstThread"]
 }
 
 task debug(dependsOn: classes, type: JavaExec) {
