Revert "Merge branch 'main' into map_contents"
This reverts commit 8c48b77baf1c5a60918d133f7e122c15856f5961, reversing
changes made to 0c75b08fe619e0d8b2e2a1b4a38120a7f4d9a30f.

--- a/source/build.gradle
+++ b/source/build.gradle
@@ -42,7 +42,7 @@ allprojects {
         ashleyVersion = '1.7.3'
         aiVersion = '1.8.2'
         gdxControllersVersion = '2.1.0'
-        junitVersion = '5.7.1'
+        junitVersion = '5.7.2'
         mockitoVersion = '3.8.0'
         gdxUtilsVersion = '0.13.4'
         slf4jVersion = '1.7.30'
@@ -81,7 +81,6 @@ project(":core") {
         api "net.dermetfan.libgdx-utils:libgdx-utils:$gdxUtilsVersion"
         api "net.dermetfan.libgdx-utils:libgdx-utils-box2d:$gdxUtilsVersion"
 
-
         // Logging
         api  "org.slf4j:slf4j-api:$slf4jVersion"
         api  "org.slf4j:slf4j-jdk14:$slf4jVersion"
@@ -98,3 +97,8 @@ project(":core") {
         testImplementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
     }
 }
+
+//dependencies {
+//    testImplementation 'junit:junit:4.13.2'
+//    testImplementation platform('org.junit:junit-bom:5.7.2')
+//}
