Add test of PlayerActions and modify some code

--- a/source/core/build.gradle
+++ b/source/core/build.gradle
@@ -1,3 +1,6 @@
+dependencies {
+    implementation 'junit:junit:4.12'
+}
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/main/" ]
